--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class=nav-items-menu>
                 <a class="hideOnMobile" href="#">Pricing</a>
                 <a class="hideOnMobile" href="https://app.central.inc/login" target="_blank">Login</a>
-                <a class="start-button" href="https://tally.so/r/w47r6Y">Start for free</a>
-                <a onclick="showMobileNav()" class="mobileHamburger" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg></a>            
-                <a onclick="hideMobileNav()" class="MobileNavCloseIcon" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg></a>
+                <a id="startButton" class="start-button" href="https://tally.so/r/w47r6Y">Start for free</a>
+                <a onclick="showMobileNav()" class="mobileHamburger" href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24"><path d="M 3 7 L 21 7 M 3 17 L 21 17" fill="transparent" stroke-width="2" stroke="rgb(0,0,0)" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray=""/></svg></a>            
+                <a onclick="hideMobileNav()" class="MobileNavCloseIcon" href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24"><path d="M 5.379 5.718 L 18.107 18.445 M 4.932 18.445 L 17.66 5.718" fill="transparent" stroke-width="2" stroke="rgb(0,0,0)" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray=""/></svg></a>
             </div>  
         </nav>
     </header>
