--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="mobileNav">
             <div class=nav-items-menu>
-                <a href="#">Pricing</a>
+                <a href="https://centralhq.com/pricing">Pricing</a>
                 <a href="https://app.central.inc/login" target="_blank">Login</a>
                 <a class="start-button" href="https://tally.so/r/w47r6Y">Start for free</a>
             </div>  
