--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <div class=nav-items-menu>
                 <a href="https://centralhq.com/pricing">Pricing</a>
                 <a href="https://app.central.inc/login" target="_blank">Login</a>
-                <a class="start-button" href="https://tally.so/r/w47r6Y">Start for free</a>
+                <a class="start-button" href="https://centralhq.com/demo?ref=landings.dev">Book a Demo</a>
             </div>  
         </nav>
         <nav class="nav-items">
             <a class="logo-link" href="https://centralhq.com">
                 <div class="logo">
-                 <img src="Images/Central Logo.png" alt="">
+                 <img src="Images/centralHQ icon.png" alt="">
                     <h4>Central</h4>
                 </div>
             </a>
             <div class=nav-items-menu>
                 <a class="hideOnMobile" href="#">Pricing</a>
                 <a class="hideOnMobile" href="https://app.central.inc/login" target="_blank">Login</a>
-                <a id="startButton" class="start-button" href="https://tally.so/r/w47r6Y">Start for free</a>
+                <a id="startButton" class="start-button" href="https://tally.so/r/w47r6Y">Book a Demo</a>
                 <a onclick="showMobileNav()" class="mobileHamburger" href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24"><path d="M 3 7 L 21 7 M 3 17 L 21 17" fill="transparent" stroke-width="2" stroke="rgb(0,0,0)" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray=""/></svg></a>            
                 <a onclick="hideMobileNav()" class="MobileNavCloseIcon" href="#"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24"><path d="M 5.379 5.718 L 18.107 18.445 M 4.932 18.445 L 17.66 5.718" fill="transparent" stroke-width="2" stroke="rgb(0,0,0)" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray=""/></svg></a>
             </div>  
@@ -44,79 +44,24 @@
     <section class="hero-section">
         <div class="hero-section-tagline">
             <span class="backed-by-text">Back by</span>
-            <img src="Images/Combinator.png" alt="">
+            <img src="Images/YCOMBINATOR.png" alt="">
             <span class="combinator-text">Combinator</span>
         </div>
         <h1>Payroll, benefits and government bullsh*t for startups</h1>
-        <p>Unlike traditional HR platforms, Central automates everything you need to operate a compliant startup – saving time, headaches & fines.</p>
+        <p>Traditional payroll platforms force you to handle every government compliance filing and HR task. Central just does it all for you, giving you back 15+ hours per month without the stress of fines.</p>
         <div class="hero-section-button">
-            <a href="https://tally.so/r/w47r6Y">Start for free</a>
-            <a href="https://tally.so/r/w47r6Y">Book a demo</a>
+            <a href="https://centralhq.com/demo?ref=landings.dev">Book a demo</a>
         </div>
+        <p class="hero-small-p">Switching providers? We'll migrate you in 15 mins.</p>
     </section>
 
     <!--Section Two-->
-
-    <section class="slider">
-        <div class="fade fade-left"></div>
-            <div class="slide-track">
-                <div class="slide">
-                    <img src="Images/Riethoric logo.png"  width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/heypurple logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/InQuery logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Dime logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Wyndly logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Riethoric logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/heypurple logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/InQuery logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Dime logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Wyndly logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Riethoric logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/heypurple logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/InQuery logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Dime logo.png" width="100px" height="auto" alt="">
-                </div>
-                <div class="slide">
-                    <img src="Images/Wyndly logo.png" width="100px" height="auto" alt="">
-                </div>
-            </div>
-        <div class="fade fade-right"></div>
-        <br>
-    </section>
-
-    <!--Section Three-->
 
     <section class="big-image">
         <img src="Images/Big Image.png" alt="">
     </section>
 
-    <!--Section Four-->
+    <!--Section Three-->
 
     <section class="section-four">
         <div class="section-four-container">
@@ -152,7 +97,7 @@
         </div>
     </section>
 
-     <!--Section Five-->
+     <!--Section Four-->
 
      <section class="section-five">
         <div class="section-five-inner">
@@ -266,7 +211,7 @@
         </div>
      </section>
 
- <!--Section Six-->
+ <!--Section five-->
 
     <section class="section-four">
         <div class="section-four-container">
@@ -285,7 +230,7 @@
         </div>
     </section>
 
- <!--Section Seven-->
+ <!--Section Six-->
 
     <section class="section-seven">
         <div class="section-seven-inner-container">
@@ -295,13 +240,13 @@
                 <a href="https://centralhq.com/pricing">Pricing & FAQ →</a>
             </div>
             <div class="section-seven-inner-container-column-two">
-                <h1>$50</h1>
-                <p>per member/month <i class="fa-solid fa-circle-exclamation"></i></p>
+                <h1>$150</h1>
+                <p>per month <i class="fa-solid fa-circle-exclamation"></i></p>
             </div>
         </div>
     </section>
 
-<!--Section Eight-->
+<!--Section Seven-->
 
 <section class="section-eight">
     <div class="section-eight-inner-container">
@@ -398,16 +343,15 @@
     </div>
 </section>
 
-<!--Section Nine-->
+<!--Section Eight-->
 
 <section class="section-nine">
     <div class="section-nine-inner-container">
-        <a  class="producthunt-badge" href="https://www.producthunt.com/posts/central-yc-s24" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=central-yc-s24&theme=light" alt="Product Hunt Badge"></a>
+        <a  class="producthunt-badge" href="https://www.producthunt.com/posts/central-yc-s24" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/top-post-badge.svg?post_id=central-yc-s24&theme=light" alt="Product Hunt Badge"></a>
         <h2>Start your free 30 day trial.</h2>
-        <p>Trusted by 100+ companies.<br>Designed for founders. Not HR/finance people.</p>
+        <p>Switching providers? We'll migrate you in 15 mins.</p>
         <div class="hero-section-button">
-            <a href="https://tally.so/r/w47r6Y">Start for free</a>
-            <a href="https://tally.so/r/w47r6Y">Book a demo</a>
+            <a href="https://centralhq.com/demo?ref=landings.dev">Book a demo</a>
         </div>
     </div>
 </section>
@@ -419,7 +363,7 @@
         <div class="footer-content-wrapper">
             <div class="first-column">
                 <div class="footer-logo">
-                     <img src="Images/Central Logo.png" alt="">
+                     <img src="Images/centralHQ icon.png" alt="">
                      <h4>Central</h4>
                  </div>
                 <div class="social-icons">
