--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
                      <h4>Central</h4>
                  </div>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/company/102778562/"><img src="Images/linkedin-brands-solid.svg" alt=""></a>
-                    <a href="https://x.com/CentralHQX"><img src="Images/x-twitter-brands-solid.svg" alt=""></a>
+                    <a href="https://www.linkedin.com/company/102778562/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://x.com/CentralHQX"><i class="fa-brands fa-x-twitter"></i></a>
                  </div>
             </div>
             <div class="second-column">
